--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,3 +3,12 @@
 <% @posts.each do |post|%>
   <%= render partial: "post", locals: { post: post } %>
 <% end %>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>JavaScript</title>
+  </head>
+  <body>
+    <script src="script.js"></script>
+  </body>
+</html>
